netcfg (1.69) UNRELEASED; urgency=low

  * armhf was accidentally removed from the Architecture field while merging
    the WPA branch.  Restore it.
  * Explicitly ignore some errors to placate -Wunused-result.
  * Adjust start_dhcp_client to placate -Wformat-security.

 -- Colin Watson <cjwatson@debian.org>  Mon, 08 Aug 2011 19:31:41 +0100

netcfg (1.68) unstable; urgency=low

  [ Updated translations ]
  * Czech (cs.po) by Miroslav Kure
  * Basque (eu.po)
  * French (fr.po) by Christian Perrier

 -- Christian Perrier <bubulle@debian.org>  Mon, 08 Aug 2011 09:05:58 +0200

netcfg (1.67) unstable; urgency=low

  * Reuploading with all the translations

 -- Gaudenz Steinlin <gaudenz@debian.org>  Sun, 31 Jul 2011 11:21:26 +0200

netcfg (1.66) unstable; urgency=low

  [ Colin Watson ]
  * Strip trailing dots from domain when writing to /etc/hosts
    (LP: #255117).

  [ Gaudenz Steinlin ]
  * Include WPA support.  Thanks to Glen Saberton and Darren Salt
    for the patch. (Closes: #327309)

  [ Updated translations ]
  * Hebrew (he.po) by Lior Kaplan
  * Macedonian (mk.po) by Arangel Angov
  * Sinhala (si.po) by Danishka Navin

 -- Gaudenz Steinlin <gaudenz@debian.org>  Sun, 31 Jul 2011 11:08:02 +0200

netcfg (1.65) unstable; urgency=low

  [ Samuel Thibault ]
  * Disable find_bootif_iface on hurd-i386, as it will not work (and even
    compile).

  [ Christian Perrier ]
  * Fix in Russian translation. Closes: #630523

  [ Colin Watson ]
  * Actually declare netcfg/network-manager template.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 19 Jul 2011 14:08:35 +0100

netcfg (1.64) unstable; urgency=low

  [ Colin Watson ]
  * Appease -Wunused-but-set-variable warning.
  * Fix fd leak in ethtool-lite.
  * Fix file handle leak in no_default_route's Hurd case.
  * Assign NETCFG_VERSION and NETCFG_BUILD_DATE using := rather than =; this
    is more efficient, and also avoids inconsistent build times being
    reported in the case where the build crossed a minute boundary.